fix text overflow

--- a/src/components/Carousel/Location/Location.module.css
+++ b/src/components/Carousel/Location/Location.module.css
@@ -37,6 +37,7 @@
 }
 
 .spotName {
+    width: 240px;
     font-weight: var(--text-weight-bold);
     text-overflow: ellipsis;
     overflow: hidden;
